tests/NormalTests/paczka1/small_fuzzy/22413389.err
Error in line 1: Y1l S301 41,3
Error in line 10: QoJkjTy A722 62f0
